@@ -38,6 +38,7 @@
             <li>Key encryption with AES key wrap: A128KW, A192KW and A256KW</li>
             <li>Key encryption with AES GCM key wrap: A128CGMKW, A192CGMKW and A256CGMKW</li>
             <li>Direct encryption with a symmetric key: dir</li>
+			<li>Password-based encryption with PBES2-HS256+A128KW, PBES2-HS384+A192KW and PBES2-HS512+A256KW</li>
         </ul>
 
         <p>JWE content encryption algorithms:</p>
