@@ -371,6 +371,8 @@ version 3.10 (2015-03-27)
 
 version 4.0 (2015-04-22)
     * Refactors the JOSE AlgorithmProvider interfaces and implementations.
+    * Adds support for password-based JWE algorithms PBES2-HS256+A128KW,
+      PBES2-HS384+A192KW and PBES2-HS512+A256KW.
     * Factors out a JCA provider interface.
     * Adds new convenience constructors to JWS and JWE providers.
     * Extends JOSE and JWT processing framework and moves it to separate
